# Big-Data-Lab-3

./: .gitignore  README.md  pyproject.toml
aiflow/: lab3_dag.py
aiflow/dags/: lab3_dag.py
notebooks/: 01_data_formatting_pipeline.ipynb  02_exploitation_pipeline.ipynb  03_analysis_pipeline.ipynb
notebooks/scripts/: 01_data_formatting_pipeline.py  02_exploitation_pipeline.py  03_analysis_pipeline.py
